fixed layout bug

--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,11 @@
   border-radius: 4px;
 }
 
+.list-group{
+  width: 40%;
+  margin-left: 70%;
+}
+
 .list-group-item {
   cursor: pointer;
 }
